Changes to Bubble Sort | Added a File class
The sort namespace is still broken.
File class not interfaced yet and not finished either.

--- a/Cpp/cppAlgornet/cppAlgornet/cppAlgornet.vcxproj
+++ b/Cpp/cppAlgornet/cppAlgornet/cppAlgornet.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="file.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="sort.cpp" />
   </ItemGroup>
