--- a/Cpp/cppAlgornet/cppAlgornet/cppAlgornet.vcxproj.filters
+++ b/Cpp/cppAlgornet/cppAlgornet/cppAlgornet.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="sort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="file.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sort.h">
